added updates on js functionality

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         </div>
         <div id="rows">
             <button id="clear">C</button>
-            <button class="btn">(</button>
-            <button class="btn">)</button>
+            <button>(</button>
+            <button>)</button>
             <button id="division">/</button>
         
             <button class="btn">9</button>
